dsa-TBD/config/kubernetes/deployment.yml

# PostgreSQL Deployment with Persistent Storage
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data  # Mount persistent storage to PostgreSQL data directory
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc  # Use the PersistentVolumeClaim

---

# PostgreSQL Service
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres

---

# IoT Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app
  labels:
    io.iot.service: iot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.iot.service: iot-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.iot.network/app-network: "true"
        io.iot.service: iot-app
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-secret  
  
      containers:
        - name: gin-app
          # image: registry.gitlab.com/iot-global/backend/iot:v1
          image: ewr.vultrcr.com/gendoc/uspresearch24:latest
          
          # image: uspresearchdsaant24:latest  # Local image
          # imagePullPolicy: Never  # Instruct Kubernetes to use the local image
          ports:
            - containerPort: 6000
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always

---

# IoT Application Service
apiVersion: v1
kind: Service
metadata:
  name: iot-app
  labels:
    io.iot.service: iot-app
spec:
  ports:
    - name: "iot-app-service"
      port: 8080
      targetPort: 8080
  selector:
    io.iot.service: iot-app
