dsa-TBD/config/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.iot.service: iot-app
  name: iot-app
spec:
  ports:
    - name: "6000"
      port: 6000
      targetPort: 6000
  selector:
    io.iot.service: iot.app
status:
  loadBalancer: {}
